--- a/XML-Project/MonoAPI/appsettings.json
+++ b/XML-Project/MonoAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseConfiguration": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "XmlDATA",
+    "CollectionName": "XmlCollection"
+  }
 }
