--- a/XML-Project/MonoLibrary/MonoLibrary.csproj
+++ b/XML-Project/MonoLibrary/MonoLibrary.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.19.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
+
 </Project>
