Xml#2.4 feature/filter flights (#1)
* added SWAGGER

* backup

* configuring MongoDB

* updated startup.cs

* backup

* added crud and connection to database

* removed UoW

* added identity fw

* Working on task

* added login/logout/register features

* Testing task in progress

* .

* .

* .

* Updated .gitignore

* .

* Updated .gitignore #2

* Updated .gitignore #3

---------

Co-authored-by: Andrija25 <93194317+Andrija25@users.noreply.github.com>
Co-authored-by: Vuk Milanovic <vuk.milanovic11@gmial.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Prerequisites
 *.d
 
+# Additional
+bin/
+obj/
+
+# Visual Studio 2022 cache/options directory
+.vs
+
 # Compiled Object files
 *.slo
 *.lo
