--- a/XML-Project/MonoAPI/appsettings.json
+++ b/XML-Project/MonoAPI/appsettings.json
@@ -12,7 +12,7 @@
   },
   "ProjectConfiguration": {
     "JWT": {
-      "Key": "sTLtaUWUsanSCzxUCVG",
+      "Key": "saTeLiTDrzavAZiveLaSrbija",
       "Issuer": "https://localhost:44352",
       "Audience": "https://localhost:44352",
       "ExpiresIn": 60
