--- a/XML-Project/MonoAPI/appsettings.json
+++ b/XML-Project/MonoAPI/appsettings.json
@@ -9,16 +9,13 @@
   "DbSettings": {
     "ConnectionString": "mongodb+srv://admin:1312@cluster0.6nsw30j.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "xml_project"
-<<<<<<< HEAD
   },
   "ProjectConfiguration": {
-    "JWT": {
-      "Key": "saTeLiTDrzavAZiveLaSrbija",
+    "Jwt": {
+      "Key": "StltXoNcKePACorbICA",
       "Issuer": "https://localhost:44352",
       "Audience": "https://localhost:44352",
       "ExpiresIn": 60
     }
-=======
->>>>>>> 2ea1682615bfec94e4e76dff9800b34eabf039b5
   }
-}
+} 
