--- a/XML-Project/Dockerfile
+++ b/XML-Project/Dockerfile
@@ -6,18 +6,18 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["MonoAPI/MonoAPI.csproj", "MonoAPI/"]
+COPY ["MonoLibrary/MonoLibrary.csproj", "MonoLibrary/"]
 RUN dotnet restore "MonoAPI/MonoAPI.csproj"
 COPY . .
-WORKDIR "/src/MonoAPI"
-RUN dotnet build "MonoAPI.csproj" -c Release -o /app/build
+WORKDIR "/src"
+RUN dotnet build "MonoAPI/MonoAPI.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "MonoAPI.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "MonoAPI/MonoAPI.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
