--- a/XML-Project/MonoAPI/Properties/launchSettings.json
+++ b/XML-Project/MonoAPI/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7159;http://localhost:5159"
+      "applicationUrl": "http://localhost:5159"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -20,7 +20,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true,
+      "publishAllPorts": false,
       "useSSL": true
     }
   },
